# CWebScrapeing

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.cmake
docs/: UrlStateMachine.puml
include/: htmldata.h  robotstxt.h  scraper.h  scraping_course.h  stack.h
include/foo/: callback.h
include/scrape/: htmldata.h  robotstxt.h  scraper.h  url.h  xmlhelpers.h
src/: CMakeLists.txt  htmldata.c  main.c  main.cpp  scraper.c  scraping_course.c  stack.c
src/foo/: CMakeLists.txt  callback.c  main.c
src/scrape/: CMakeLists.txt  buffer.c  buffer.h  htmldata.c  robotstxt.cpp  scraper.c  url.c  xmlhelpers.c
tests/: CMakeLists.txt  scrape.cpp  test_main.cpp  tmp.c  url.cpp
tests/fixtures/: scrape.hpp  url.hpp
tests/referencefiles/: scrapingcourse_ref.txt
